--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main { java.srcDirs = ['src/main/java', 'src/test/java/', 'src/androidTest/java'] }
+    }
 }
 
 dependencies {
